--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.nav-bar ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+}
+
+.nav-bar li
+{
+  display: inline-block;
+  margin:20px;
+}
+
+.nav-bar a{
+  text-decoration: none;
+  color: black;
+}
